Refactorización entera completada

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       Recuerda que no puedes abrir este archivo directamente, tienes que cargarlo desde un servidor web, yá sea local o remoto, para que la carga de la tipografía funcione correctamente.
     </p>
     
-    <script src="dist/index.min.js"></script>
+    <script src="dist/index.js"></script>
     <script src="test/index.js"></script>
   </body>
 </html>
