--- a/README.html
+++ b/README.html
@@ -5,21 +5,47 @@
       </head>
       <body>
         <h1 id="fontface-interface-polyfill">FontFace interface - Polyfill</h1>
-<p>Es un polyfill para la interfaz FontFace, que se usa para cargar las tipografías webs por Javascript.
-Actualmente solo tiene un sólo método que es el &#39;load&#39;, y sirve para realizar la carga de la fuente, y es compatible a partir de IE10</p>
-<p>Este polyfill mantiene la sintaxis exacta de la interfaz nativa FontFace, así que no hay ningún problema que se use exactamente igual, por ejemplo:</p>
+<p>Es un polyfill para la interfaz FontFace, que se usa para cargar las tipografías webs por Javascript.</p>
+<p>Actualmente solo tiene un método que es el &#39;load&#39;, y sirve para realizar la carga de la fuente.</p>
+<p>Este polyfill mantiene la sintaxis exacta de la interfaz nativa FontFace, así que no hay ningún problema que se use exactamente igual.</p>
 <pre><code class="lang-js">var omnes = new FontFace(&#39;Omnes&#39;, &quot;url(&#39;./fonts/omnes-semibold.ttf&#39;) format(&#39;truetype&#39;), url(&#39;./fonts/omnes-semibold.woff2&#39;) format(&#39;woff2&#39;), url(&#39;./fonts/omnes-semibold.woff&#39;) format(&#39;woff&#39;)&quot;, { style: &#39;normal&#39;, weight: 600 });
-omnes.load().then(function (omnesFontFace) {
-   document.fonts.add(omnesFontFace);
+</code></pre>
+<h2 id="ejemplos-de-modos-de-uso">Ejemplos de modos de uso</h2>
+<pre><code class="lang-js">
+/* Modo simple con .then y .catch separados */
+omnes.load()
+   .then(function (fontObj) {
+      document.fonts.add(fontObj);
+   })
+   .catch(function (err) {
+      console.log(err);
+   });
+
+
+/* Modo solo con .then y el catch dentro del él */
+omnes.load()
+   .then(function (fontObj) {
+      document.fonts.add(fontObj);
+   }, function (err) {
+      console.log(err);
+   });
+
+
+/* Adjunto ala promesa .loaded y luego cargo la fuente */
+omnes.loaded.then(function (objFont) {
+   document.fonts.add(objFont);
+}, function (err) {
+   console.log(err);
 });
+omnes.load();
 </code></pre>
 <h2 id="navegadores-compatibles">Navegadores compatibles</h2>
-<p>IE10+, Chrome, Firefox, Safari, Opera</p>
+<p>IE11+, Chrome, Firefox, Safari, Opera</p>
 <h2 id="caracteristicas">Caracteristicas</h2>
 <ul>
-<li>Carga en paralelo de las tipografías</li>
+<li>Carga paralela de tipografías</li>
 <li>Usa el localStorage como caché.</li>
-<li>Simulación de una respuesta tipo promesa (usando el .then).</li>
+<li>Simulación de una respuesta tipo promesa (usando el .then y .catch).</li>
 </ul>
 <p>Por el momento es todo lo que trae, más adelante agregaré más caracteristicas, como más métodos y eventos.</p>
 <h2 id="licencia">Licencia</h2>
